--- a/static/privacy.html
+++ b/static/privacy.html
@@ -15,5 +15,5 @@ GMail account after a minute or so. (If they don't, check whether you have an
 automated rule that moves or deletes emails.)</p>
 <p>There are no third-party analytics scripts running on the page. Your draft
 emails are never read by anyone, or logged.</p>
-<p>(You can <a href="https://github.com/kevinburke/multi-emailer">read through the code</a> to verify this yourself!)</p>
+<p>(You can <a href="https://github.com/yimbycode/emailer">read through the code</a> to verify this yourself!)</p>
 <p>Go <a href="/">back to the homepage</a>.</p>
